# c_containers

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
inc/: operator.h  types.h
inc/array/: decl_array.h  impl_array.h
include/: operator.h  types.h
include/array/: decl_array.h  impl_array.h
src/array/: impl_array.c
tests/: CMakeLists.txt
tests/array/: CMakeLists.txt  array_test.c  array_test.h  test_struct.c  test_struct.h
tests/include/: test.h
